--- a/roles/templates/html.index.j2
+++ b/roles/templates/html.index.j2
@@ -1,4 +1,4 @@
 <VirtualHost *:80>
-    ServerName "{{ server_name }}"
-    DocumentRoot "{{ document_root }}"
+    ServerName {{server_name}}
+    DocumentRoot {{document_root}}
 </VirtualHost>
