--- a/roles/templates/html.index.j2
+++ b/roles/templates/html.index.j2
@@ -1,3 +1,3 @@
 
-    ServerName "{{ server_name }}"
-    DocumentRoot "{{ document_root }}"
+    ServerName {{server_name}}
+    DocumentRoot {{document_root}}
